cuda_macros/src/cublaslt_internal.rs

extern "system" {
    fn cublasLtBSBMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHSSMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtHSSMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHSSMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHSSMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHSSMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHSSMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCCMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtKCCMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCCMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCCMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCCMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCCMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCKMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtKCKMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCKMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCKMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCKMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtKCKMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtTSSMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtTSSMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtTSSMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtTSSMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtTSSMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
